[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/StorageBase/StorageBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://music/sexxxy_bit_3.ogg" type="AudioStream" id=2]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UI/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/World/World.gd" type="Script" id=5]
[ext_resource path="res://scenes/Transitions/CircleTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/joystix.tres" type="DynamicFont" id=7]

[node name="World" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 865.113, -90.0 ],
"_edit_vertical_guides_": [ 768.02 ]
}

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 32 )
current = true
limit_left = 0
smoothing_speed = 0.0

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="RemoteTransform2D" parent="Player" index="1"]
remote_path = NodePath("../../Camera2D")

[node name="StorageBase" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="CameraShakeTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CircleTransition" parent="." instance=ExtResource( 6 )]

[node name="LevelChangeLabel" type="Label" parent="CircleTransition"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = -18.0
custom_fonts/font = ExtResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionOutTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
[connection signal="item_picked" from="Player" to="UI" method="_on_Player_item_picked"]
[connection signal="item_used" from="Player" to="UI" method="_on_Player_item_used"]
[connection signal="timeout" from="CameraShakeTimer" to="." method="_on_CameraShakeTimer_timeout"]
[connection signal="timeout" from="TransitionOutTimer" to="." method="_on_TransitionOutTimer_timeout"]

[editable path="UI"]

[editable path="UI/Panel"]

[editable path="Player"]

[editable path="CircleTransition"]
